fixed license fields in META.json to be lists

--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for Games-Trackword
 ====================================
 
+        - fixed license fields in META.json to be lists.
+
 1.08    2014-06-18
         - fixed distribution name in META.
         - added git repository links to metadata.
