--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for Games-Trackword
 ====================================
 
         - fixed license fields in META.json to be lists.
+        - extended META test suites.
 
 1.08    2014-06-18
         - fixed distribution name in META.
